# nutrition-tracker

./: CMakeLists.txt  LICENSE  README.md  Todo.md  build.sh  conanfile.txt  todo.md  vcpkg.json
res/: database.json  day0.json
src/: Application.cpp  Application.h  CMakeLists.txt  NutritionTracker.cpp  NutritionTracker.h  Utils.h  imgui_combo_autoselect.cpp  imgui_combo_autoselect.h
